Less reliance on untrusted server vars. Nicer test page.

--- a/Application/View/Test.phtml
+++ b/Application/View/Test.phtml
@@ -1,1 +1,10 @@
-<?php echo $message; ?>
+<div>
+    <h2>Success!</h2>
+    <p>This Web Page has been generated through MVC. Here is some proof.</p>
+    <ul>
+        <li>Controller: <?php echo $controller?></li>
+        <li>Method: <?php echo $method?></li>
+        <li>Parameters: <?php echo $params?></li>
+    </ul>
+</div>
+    
