--- a/Application/View/Header.phtml
+++ b/Application/View/Header.phtml
@@ -1,1 +1,8 @@
-<h1>MVC</h1>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head>
+        <link rel="stylesheet" type="text/css" href="<?php echo $url; ?>Application/Include/Styles.css"/>
+        <title>Conforming XHTML 1.0 Strict Template</title>
+    </head>
+    <body>
