--- a/Application/View/Test.phtml
+++ b/Application/View/Test.phtml
@@ -2,6 +2,7 @@
     <h2>Success!</h2>
     <p>This Web Page has been generated through MVC. Here is some proof.</p>
     <ul>
+        <?php var_dump($data); ?>
         <li>Controller: <?php echo $controller?></li>
         <li>Method: <?php echo $method?></li>
         <li>Parameters: <?php echo $params?></li>
