--- a/Application/View/Header.phtml
+++ b/Application/View/Header.phtml
@@ -2,8 +2,12 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="<?php echo $url; ?>Application/Include/Styles.css"/>
+        <link href='http://fonts.googleapis.com/css?family=Junge' rel='stylesheet' type='text/css'>
         <title>Conforming XHTML 1.0 Strict Template</title>
     </head>
 
     <body>
     <h1>Careful Coder MVC Framework.</h1>
+    <div class="bg"></div>
+    <div class="stuff">
+        <div class="gradientborder top"></div>
