Replace loader with Composer.

--- a/Application/View/Header.phtml
+++ b/Application/View/Header.phtml
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="Content-type" value="text/html; charset=UTF-8" />
+        <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="<?=$this['url']; ?>Application/Include/Styles.css"/>
         <link href='http://fonts.googleapis.com/css?family=Junge' rel='stylesheet' type='text/css'>
-        <title>Conforming XHTML 1.0 Strict Template</title>
+        <title>Careful Coder MVC Framework</title>
     </head>
 
     <body>
