Dubious use of traits to make anything easily configurable. DB Factory as a result.

--- a/Iguana/Application/View/Header.phtml
+++ b/Iguana/Application/View/Header.phtml
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="<?=$this['url']; ?>Application/Include/Styles.css"/>
+        <link rel="stylesheet" type="text/css" href="<?=dirname($this['url']); ?>/Styles.css"/>
         <link href='http://fonts.googleapis.com/css?family=Junge' rel='stylesheet' type='text/css'>
         <title>Careful Coder MVC Framework</title>
     </head>
