--- a/Tvc/Application/View/Test.phtml
+++ b/Tvc/Application/View/Test.phtml
@@ -3,5 +3,5 @@
 <ul>
     <li>Controller: <?=$this['controller']; ?></li>
     <li>Method: <?=$this['method']; ?></li>
-    <li>Parameters: <?=implode(', ', $this['params']); ?></li>
+    <li>Parameters: <?=$this['params']; ?></li>
 </ul>
